2008-08-02  Aurimas Juška  <aurisj@svn.gnome.org>

	* app/core/gimptagcache.c (gimp_tag_cache_load): fixed small memory
	leak.

2008-08-01  Aurimas Juška  <aurisj@svn.gnome.org>

	* app/widgets/gimptagpopup.c: close tag popup on keyboard input.

2008-08-01  Aurimas Juška  <aurisj@svn.gnome.org>

	* app/widgets/gimptagentry.c (gimp_tag_entry_focus_in),
	(gimp_tag_entry_key_press): fixed usage of tab key.

2008-08-01  Aurimas Juška  <aurisj@svn.gnome.org>

	* app/widgets/gimptagentry.c: hide tags on assign tag entry when
	selected item is not visible in the view.

2008-07-31  Sven Neumann  <sven@gimp.org>

	* app/core/gimpimage-scale.c (gimp_image_scale): formatting.

2008-07-31  Aurimas Juška  <aurisj@svn.gnome.org>

	* app/widgets/gimpcombotagentry.[ch]
	* app/widgets/gimptagpopup.[ch]: when selecting tags in the popup
	list, grayout tags which if selected would result in empty resource
	list.

2008-07-31  Aurimas Juška  <aurisj@svn.gnome.org>

	* app/widgets/gimptagentry.c (gimp_tag_entry_assign_tags): don't unref
	tags since they are currently only referenced by tagged objects.

2008-07-30  Jakub Steiner <jimmac@ximian.com>

	* data/images/gimp-splash.png: new devel splash from 
	Aurore Derriennic <aurore.d@gmail.com>

2008-07-30  Sven Neumann  <sven@gimp.org>

	* app/dialogs/file-open-dialog.c (file_open_dialog_response):
	attach the URI of the last opened image to the Gimp object.

	* app/actions/file-commands.c (file_open_dialog_show): use the
	last opened URI as a fallback for initializing the dialog.

2008-07-30  Aurimas Juška  <aurisj@svn.gnome.org>

	* app/widgets/gimptagentry.c (gimp_tag_entry_dispose): free recently
	used tags list.

2008-07-30  Aurimas Juška  <aurisj@svn.gnome.org>

	* app/widgets/gimptagpopup.[ch]: added support for single tag
	selection in tag popup. User can press mouse button, drag to select a
	tag and release mouse button. Selected tag is toggled
	selected/deselected and popup is closed.

2008-07-29  Sven Neumann  <sven@gimp.org>
