@@ -1,3 +1,11 @@
+2008-08-03  Aurimas Juška  <aurisj@svn.gnome.org>
+
+	* app/core/gimpdata.c (gimp_data_get_identifier)
+	* app/core/gimptagcache.c (gimp_tag_cache_object_add),
+	(tagged_to_cache_record_foreach)
+	* app/core/gimptagged.c: GimpTagged identifier is now always UTF-8
+	string.
+
 2008-08-02  Aurimas Juška  <aurisj@svn.gnome.org>
 
 	* app/core/gimptagcache.c (gimp_tag_cache_load): fixed small memory
